--- a/sass/HomeSection/_containerProps.scss
+++ b/sass/HomeSection/_containerProps.scss
@@ -7,7 +7,7 @@
       rgba(0, 0, 0, 0.7),
       rgba(0, 0, 0, 0.9)
     ),
-    url('../../img/bg.jpg');
+    url('../../img/bg.JPG');
 
   background-attachment: fixed;
   background-position: center center;
