--- a/sass/style.css
+++ b/sass/style.css
@@ -142,8 +142,8 @@ html {
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 97%);
           clip-path: polygon(0 0, 100% 0, 100% 100%, 0 97%);
   color: #fff;
-  background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.5)), color-stop(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.9))), url("../img/bg.JPG");
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.9)), url("../img/bg.JPG");
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.5)), color-stop(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.9))), url("../img/bg.jpg");
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.9)), url("../img/bg.jpg");
   background-attachment: fixed;
   background-position: center center;
   background-repeat: no-repeat;
