--- a/sass/MediaQueries/_navTab.scss
+++ b/sass/MediaQueries/_navTab.scss
@@ -1,49 +1,52 @@
-.myNav{
-    justify-content: space-between;
-    .burger{
-        display: block;
-        cursor: pointer;
+.myNav {
+  justify-content: space-between;
+  .burger {
+    display: block;
+    cursor: pointer;
+  }
+  .nav-links {
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 50%;
+    position: absolute;
+    right: 0;
+    top: 10vh;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: all 0.4s ease-in;
+    li {
+      opacity: 0;
     }
-    .nav-links{
-        background-color: rgba(0,0,0,0.7);
-        width: 50%;
-        position: absolute;
-        right: 0;
-        top: 10vh;
-        height: 80vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        transform:translateX(100%);
-        transition: all 0.4s ease-in;
-        li{
-            opacity: 0;
-        }
+    .cut-button {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      float: left;
+      display: block;
     }
-    .nav-active{
-        transform:translateX(0%);
-    }
-
+  }
+  .nav-active {
+    transform: translateX(0%);
+  }
 }
 
 @keyframes navLinkFade {
-    from{
-        opacity: 0;
-        transform: translateX(50px);
-    }
-    to{
-        opacity: 1;
-        transform: translateX(0);
-    }
-    
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
-
-.newNav{
-    .nav-links{
-        // background-color: rgba(193, 193, 193, 0.9) !important;
-        background-color: #f1faee !important;
-    }
-
+.newNav {
+  .nav-links {
+    // background-color: rgba(193, 193, 193, 0.9) !important;
+    background-color: #f1faee !important;
+  }
 }
