--- a/sass/HomeSection/_navbar.scss
+++ b/sass/HomeSection/_navbar.scss
@@ -86,7 +86,7 @@
 
   transition: all 0.3s ease;
 }
-
+/*****
 .burger-change {
   .line1 {
     width: 40px;
@@ -105,6 +105,7 @@
     transform: rotate(45deg);
   }
 }
+****/
 
 /**FOR WHITE BACKGROUNDS***/
 .newNav {
