--- a/sass/MediaQueries/_navTab.scss
+++ b/sass/MediaQueries/_navTab.scss
@@ -5,27 +5,32 @@
     cursor: pointer;
   }
   .nav-links {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 1);
     width: 50%;
     position: absolute;
     right: 0;
-    top: 10vh;
-    height: 80vh;
+    top: 0;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     transform: translateX(100%);
     transition: all 0.4s ease-in;
     li {
       opacity: 0;
     }
     .cut-button {
+      font-size: 1.5rem;
+      cursor: pointer;
       position: absolute;
-      top: 20px;
-      right: 20px;
+      top: 2rem;
+      right: 2rem;
       float: left;
       display: block;
+    }
+    .cut-button:hover {
+      color: color(buttons);
     }
   }
   .nav-active {
