--- a/sass/ProjectsSection/_projects.scss
+++ b/sass/ProjectsSection/_projects.scss
@@ -16,12 +16,10 @@
     height: 350px;
     margin: 0.7rem;
     transition: all 0.2s;
-    // box-shadow: 1px 1px 5px 1px #000;
+    transform: translateY(10px);
     .card-img {
-      //   z-index: 3;
-      // width: 100%;
       height: 100%;
-      // background-color: #c1c1c1;
+
       img {
         width: 100%;
         height: 100%;
@@ -56,12 +54,14 @@
       transition: all 0.2s;
     }
   }
-
   .card:hover {
     // box-shadow: 1px 3px 10px color(primary);
     .zinc {
       content: '';
       opacity: 1;
     }
+  }
+  .cardGoesUp {
+    transform: translateY(-10px);
   }
 }
