--- a/sass/MediaQueries/_navTab.scss
+++ b/sass/MediaQueries/_navTab.scss
@@ -14,11 +14,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     transform: translateX(100%);
     transition: all 0.4s ease-in;
     li {
       opacity: 0;
+      margin: 1em 1.5em;
     }
     .cut-button {
       font-size: 1.5rem;
