--- a/sass/PreLoaders/_loader.scss
+++ b/sass/PreLoaders/_loader.scss
@@ -1,33 +1,32 @@
-.loader{
-    background-color:rgba(255, 255,255,1);
-    width: 100%;
-    height: 100vh;
+.loader {
+  background-color: rgba(255, 255, 255, 1);
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  z-index: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .logo {
+    position: relative;
+    border: 2px solid;
+    padding: 0.6rem;
+  }
+  .logo::before {
+    content: '';
     position: absolute;
-    top:0;
-    z-index: 5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    .logo{
-        position: relative;
-        border: 2px solid;
-        padding:0.6rem;
-    }
-    .logo::before{
-        content: "";
-        position: absolute;
-        top:0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        margin: 3px 0px 0px 3px;
-        border-right: 2px solid #000;
-        border-bottom: 2px solid #000;
-    }
-    transition: all 0.5s ease;
-} 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 3px 0px 0px 3px;
+    border-right: 2px solid #000;
+    border-bottom: 2px solid #000;
+  }
+  transition: all 0.5s ease;
+}
 
-
-.disAppearClass{
-   display: none;
+.disAppearClass {
+  display: none;
 }
