--- a/sass/EducationSection/_education.scss
+++ b/sass/EducationSection/_education.scss
@@ -19,9 +19,8 @@
     justify-content: space-around;
     align-items: flex-start;
     .date {
-      flex: 0.3;
+      // flex: 0.3;
       padding-left: 1rem;
-
       p {
         font-size: 16px;
         font-weight: bold;
