--- a/sass/MediaQueries/_mediaqueries.scss
+++ b/sass/MediaQueries/_mediaqueries.scss
@@ -31,6 +31,9 @@
         color: color(font);
         font-size: 1.5rem;
       }
+      p {
+        font-size: 14px;
+      }
       margin-bottom: 2rem;
     }
   }
