--- a/sass/ProjectsSection/_projects.scss
+++ b/sass/ProjectsSection/_projects.scss
@@ -21,11 +21,8 @@
     width: 220px;
     height: 350px;
     margin: 0.7rem;
-    transition: all 0.2s;
-    transform: translateY(10px);
     .card-img {
       height: 100%;
-
       img {
         width: 100%;
         height: 100%;
@@ -57,14 +54,25 @@
       transition: all 0.2s;
     }
   }
+  .left {
+    opacity: 0;
+    transition: all 0.8s;
+    transform: translateX(-15px);
+  }
+  .right {
+    opacity: 0;
+    transition: all 0.8s;
+    transform: translateX(15px);
+  }
+
   .card:hover {
-    // box-shadow: 1px 3px 10px color(primary);
     .zinc {
       content: '';
       opacity: 1;
     }
   }
-  .cardGoesUp {
-    transform: translateY(-10px);
+  .cardAnim {
+    opacity: 1;
+    transform: translateX(0px);
   }
 }
